Fix all spacing issues as requested in CR

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@
 
 .header {
   display: flex;
-  padding-right: 20px;
+  padding-right: 0;
   padding-top: 10px;
   padding-bottom: 10px;
   flex-direction: column;
@@ -50,8 +50,6 @@
 
 .bg {
   display: flex;
-  height: 80vh;
-  width: 100vw;
   flex-direction: column;
   align-items: center;
   background-image: url("assets/images/background.png");
@@ -59,7 +57,7 @@
   background-position: center center;
   background-size: cover;
   padding-top: 8%;
-  margin: 0;
+  margin-bottom: 30px;
 }
 
 .menu-btn {
@@ -82,6 +80,7 @@
   justify-content: space-between;
   padding-top: 10px;
   width: 300px;
+  margin-left: 50px
 }
 
 .social-btn {
@@ -99,6 +98,7 @@
   margin-top: 10%;
   width: 50px;
   height: 50px;
+  margin-bottom: 20px;
 }
 
 section {
@@ -129,8 +129,7 @@ li {
 
 #works {
   display: grid;
-  margin: 0;
-  grid-template-columns: 15% 1fr 15%;
+  grid-template-columns: 8% 1fr 23%;
   grid-template-rows: 2% 30px repeat(4, 1fr);
   row-gap: 24px;
   width: 90vw;
@@ -158,6 +157,7 @@ li {
   height: 474px;
   flex-direction: column;
   justify-content: flex-end;
+  margin: 0
 }
 
 .card1 {
@@ -273,79 +273,48 @@ li {
 }
 
 #about {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
   margin: 0;
-  grid-template-columns: 15% 1fr 15%;
-  grid-template-rows: 20% 20% repeat(3, 1fr);
   padding: 0;
-  height: 390px;
 }
 
 #about-title {
-  grid-column-start: 2;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  align-self: center;
-  justify-self: center;
   text-align: center;
+  margin: 0;
 }
 
 #about-content {
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row-start: 2;
-  grid-row-end: 3;
-  align-self: center;
-  justify-self: center;
   text-align: center;
-  width: 80%;
   font-family: 'Inter-light', sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 32px;
-  margin-top: 90px;
-}
-
-#about-social {
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row-start: 3;
-  grid-row-end: 4;
-  justify-self: center;
-  margin-top: 85px;
+  width: 75%;
+  margin: 0;
 }
 
 #about-img-1 {
-  grid-column-start: 3;
-  grid-column-end: 4;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  justify-self: center;
-  align-self: center;
+  justify-self: flex-end;
+  align-self: flex-end;
   height: 127px;
 }
 
 #about-img-2 {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 5;
-  grid-row-end: 6;
-  align-self: center;
+  align-self: flex-start;
 }
 
 #about-btn {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 4;
-  grid-row-end: 5;
+  margin-top: 20px;
   justify-self: center;
-  margin-top: 40px;
 }
 
 #skills {
   display: grid;
   margin-top: 70px;
-  grid-template-columns: 15% 1fr 15%;
+  grid-template-columns: 23% 1fr 15%;
   grid-template-rows: repeat(3, 1fr);
   row-gap: 24px;
   width: 90vw;
